--- a/config/gtk-3.0/gtk.css
+++ b/config/gtk-3.0/gtk.css
@@ -1,3 +1,5 @@
+# from https://github.com/jcs/dotfiles/blob/master/.config/gtk-3.0/gtk.css
+
 * {
 	font-family: "Microsoft Sans Serif";
 	font-size: 12pt;
